<resources>
    <string name="app_name">77 맞은 어르신</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="signin">로그인</string>
    <string name="success_login">로그인 성공</string>
    <string name="failed_login">로그인 실패</string>
    <string name="signup">회원가입</string>
    <string name="success_signup">회원가입 성공</string>
    <string name="failed_signup">회원가입 실패</string>
    <string name="info">고객센터 | 1588-1588 | 경기도 성남시 신구대학교</string>
    <string name="info_1">Copyright © 2021 GB Inc. All rights reserved.</string>
    <string name="pro_explane">보호자 등록 관련하여 아래 내용을 인지하십시오.</string>
    <string name="explane">사용자 등록 방법</string>
    <string name="explane_1">1. 사용자에게 인증코드를 전달받습니다.</string>
    <string name="explane_1_1">[메인화면]에서 [설정]버튼을 클릭</string>
    <string name="explane_1_2">[보호자 등록 코드] 메뉴로 이동 -> 코드 확인</string>
    <string name="explane_2">2. 인증코드 6자리를 입력합니다.</string>
    <string name="explane_3">※ 사용자의 위치, 히스토리 등의 정보 열람 가능</string>
    <string name="explane_4">※ 사용자를 고려해주세요</string>
    <string name="explane_5">위치공유에 대한 거부감을 인지하고 배려해주세요.</string>
    <string name="app_info_01_01">65세 이상 노인 인구 771만 명 중 치매 추정 환자 수는</string>
    <string name="app_info_01_02">약 11%의 인구인 78만 명을 넘었습니다.</string>
    <string name="app_info_02_01">위치추적을 통해 치매위험군 어르신의 범죄를 예방하고</string>
    <string name="app_info_02_02">일정 구역 이탈 시, 알람을 통해 빠른 대처가 가능합니다.</string>
    <string name="app_info_03_01">두뇌훈련을 통해 치매 예방 서비스를 제공합니다.</string>
    <string name="app_info_03_02">만보기 기능을 통해 건강 유지 서비스를 제공합니다.</string>
    <string name="app_info_04_01">치매 어르신은 일반 어르신 보다 보행 속도가 느립니다.</string>
    <string name="app_info_04_02">진단하기 기능을 통해 보행 속도를 확인하고</string>
    <string name="app_info_04_03">두뇌훈련을 진행하면서 자가진단 서비스를 제공합니다.</string>
    <string name="app_info_05_01">걷기, 두뇌훈련을 통해 더 건강해지기 위해 노력하고</string>
    <string name="app_info_05_02">함께 고민하는 사람들과 경쟁하여 랭킹을 올리세요.</string>
    <string name="app_info_06_01">치매는 마음의 병입니다.</string>
    <string name="app_info_07_01">내 가족, 친구, 지인 그리고 나 자신을 위해</string>
    <string name="app_info_07_02">열심히 걷고, 훈련해주세요 :></string>
    <string name="personal_content">
        [ Golden Balance ]("황금밸런스"이하 "GB")은(는) 「개인정보 보호법」 제30조에 따라 정보주체의 개인정보를 보호하고 이와 관련한 고충을 신속하고 원활하게 처리할 수 있도록 하기 위하여 다음과 같이 개인정보 처리방침을 수립·공개합니다.\n\n

        ○ 이 개인정보처리방침은 2021년  11월  1일부터 적용됩니다.\n\n

제1조(개인정보의 처리 목적)\n
        [ Golden Balance ]("황금밸런스"이하 "GB")은(는) 다음의 목적을 위하여 개인정보를 처리합니다. 처리하고 있는 개인정보는 다음의 목적 이외의 용도로는 이용되지 않으며 이용 목적이 변경되는 경우에는 「개인정보 보호법」 제18조에 따라 별도의 동의를 받는 등 필요한 조치를 이행할 예정입니다.\n
• 1. 홈페이지 회원가입 및 관리\n
• 회원 가입의사 확인, 회원제 서비스 제공에 따른 본인 식별·인증, 회원자격 유지·관리, 서비스 부정이용 방지 목적으로 개인정보를 처리합니다.\n
• 2. 재화 또는 서비스 제공\n
• 서비스 제공, 콘텐츠 제공, 맞춤서비스 제공, 본인인증을 목적으로 개인정보를 처리합니다.\n\n

제2조(개인정보의 처리)\n
        ① [ Golden Balance ]은(는) 법령에 따른 개인정보 보유·이용기간 또는 정보주체로부터 개인정보를 수집 시에 동의받은 개인정보 보유·이용기간 내에서 개인정보를 처리·보유합니다.\n\n

제3조(개인정보의 제3자 제공)\n
        ① [ Golden Balance ]은(는) 개인정보를 제1조(개인정보의 처리 목적)에서 명시한 범위 내에서만 처리하며, 정보주체의 동의, 법률의 특별한 규정 등 「개인정보 보호법」 제17조 및 제18조에 해당하는 경우에만 개인정보를 제3자에게 제공합니다.\n
② [ Golden Balance ]은(는) 다음과 같이 개인정보를 제3자에게 제공하고 있습니다.\n
• 1. [Golden Balance ]\n
• 개인정보를 제공받는 자 : Golden Balance\n
• 제공받는 자의 개인정보 이용목적 : 이메일, 휴대전화번호, 자택주소, 비밀번호, 로그인ID, 성별, 생년월일, 이름\n
• 제공받는 자의 보유.이용기간: 준영구\n\n

제4조(개인정보처리 위탁)① [ Golden Balance ]은(는) 개인정보 처리업무를 위탁하고 있지 않습니다.\n\n

제5조(정보주체와 법정대리인의 권리·의무 및 그 행사방법)\n
① 정보주체는 Golden Balance에 대해 언제든지 개인정보 열람·정정·삭제·처리정지 요구 등의 권리를 행사할 수 있습니다.\n
② 제1항에 따른 권리 행사는Golden Balance에 대해 「개인정보 보호법」 시행령 제41조제1항에 따라 서면, 전자우편, 모사전송(FAX) 등을 통하여 하실 수 있으며 Golden Balance은(는) 이에 대해 지체 없이 조치하겠습니다.\n
③ 제1항에 따른 권리 행사는 정보주체의 법정대리인이나 위임을 받은 자 등 대리인을 통하여 하실 수 있습니다.이 경우 “개인정보 처리 방법에 관한 고시(제2020-7호)” 별지 제11호 서식에 따른 위임장을 제출하셔야 합니다.\n
④ 개인정보 열람 및 처리정지 요구는 「개인정보 보호법」 제35조 제4항, 제37조 제2항에 의하여 정보주체의 권리가 제한 될 수 있습니다.\n
⑤ 개인정보의 정정 및 삭제 요구는 다른 법령에서 그 개인정보가 수집 대상으로 명시되어 있는 경우에는 그 삭제를 요구할 수 없습니다.\n
⑥ Golden Balance은(는) 정보주체 권리에 따른 열람의 요구, 정정·삭제의 요구, 처리정지의 요구 시 열람 등 요구를 한 자가 본인이거나 정당한 대리인인지를 확인합니다.\n\n

제6조(처리하는 개인정보의 항목 작성)① [ Golden Balance ]은(는) 다음의 개인정보 항목을 처리하고 있습니다.\n
• 1[ 홈페이지 회원가입 및 관리 ]\n
• 필수항목 : 이메일, 휴대전화번호, 자택주소, 비밀번호, 로그인ID, 성별, 생년월일, 이름\n\n

제7조(개인정보의 파기)\n
① [Golden Balance ]은(는) 개인정보 보유기간의 경과, 처리목적 달성 등 개인정보가 불필요하게 되었을 때에는 지체없이 해당 개인정보를 파기합니다.② 정보주체로부터 동의받은 개인정보 보유기간이 경과하거나 처리목적이 달성되었음에도 불구하고 다른 법령에 따라 개인정보를 계속 보존하여야 하는 경우에는, 해당 개인정보를 별도의 데이터베이스(DB)로 옮기거나 보관장소를 달리하여 보존합니다.1. 법령 근거 :2. 보존하는 개인정보 항목 : 계좌정보, 거래날짜③ 개인정보 파기의 절차 및 방법은 다음과 같습니다.1. 파기절차[ Golden Balance ]은(는) 파기 사유가 발생한 개인정보를 선정하고, [Golden Balance ]의 개인정보 보호책임자의 승인을 받아 개인정보를 파기합니다.\n
2. 파기방법\n
전자적 파일 형태의 정보는 기록을 재생할 수 없는 기술적 방법을 사용합니다.종이에 출력된 개인정보는 분쇄기로 분쇄하거나 소각을 통하여 파기합니다\n\n

제8조(개인정보의 안전성 확보 조치)\n
        [ Golden Balance ]은(는) 개인정보의 안전성 확보를 위해 다음과 같은 조치를 취하고 있습니다.\n
1. 내부관리계획의 수립 및 시행개인정보의 안전한 처리를 위하여 내부관리계획을 수립하고 시행하고 있습니다.\n
        2. 개인정보의 암호화이용자의 개인정보는 비밀번호는 암호화 되어 저장 및 관리되고 있어, 본인만이 알 수 있으며 중요한 데이터는 파일 및 전송 데이터를 암호화 하거나 파일 잠금 기능을 사용하는 등의 별도 보안기능을 사용하고 있습니다.\n
        3. 개인정보에 대한 접근 제한개인정보를 처리하는 데이터베이스시스템에 대한 접근권한의 부여,변경,말소를 통하여 개인정보에 대한 접근통제를 위하여 필요한 조치를 하고 있으며 침입차단시스템을 이용하여 외부로부터의 무단 접근을 통제하고 있습니다.\n\n

제9조(개인정보 자동 수집 장치의 설치•운영 및 거부에 관한 사항)\n
Golden Balance 은(는) 정보주체의 이용정보를 저장하고 수시로 불러오는 ‘쿠키(cookie)’를 사용하지 않습니다.\n\n

제10조 (개인정보 보호책임자)\n
① Golden Balance  은(는) 개인정보 처리에 관한 업무를 총괄해서 책임지고, 개인정보 처리와 관련한 정보주체의 불만처리 및 피해구제 등을 위하여 아래와 같이 개인정보 보호책임자를 지정하고 있습니다.\n
• ▶ 개인정보 보호책임자\n
• 성명 :황원태\n
• 직책 :팀장\n
• 연락처 :01071032146, amlk31255@gmail.com,\n
② 정보주체께서는 Golden Balance 의 서비스(또는 사업)을 이용하시면서 발생한 모든 개인정보 보호 관련 문의, 불만처리, 피해구제 등에 관한 사항을 개인정보 보호책임자 및 담당부서로 문의하실 수 있습니다. Golden Balance 은(는) 정보주체의 문의에 대해 지체 없이 답변 및 처리해드릴 것입니다.\n\n

제11조(개인정보 열람청구)[ Golden Balance ]은(는) 정보주체의 개인정보 열람청구가 신속하게 처리되도록 노력하겠습니다.\n\n

제12조(권익침해 구제방법)정보주체는 개인정보침해로 인한 구제를 받기 위하여 개인정보분쟁조정위원회, 한국인터넷진흥원 개인정보침해신고센터 등에 분쟁해결이나 상담 등을 신청할 수 있습니다.\n\n

        이 밖에 기타 개인정보침해의 신고, 상담에 대하여는 아래의 기관에 문의하시기 바랍니다.\n
        1. 개인정보분쟁조정위원회 : (국번없이) 1833-6972 (www.kopico.go.kr)\n
        2. 개인정보침해신고센터 : (국번없이) 118 (privacy.kisa.or.kr)\n
        3. 대검찰청 : (국번없이) 1301 (www.spo.go.kr)\n
        4. 경찰청 : (국번없이) 182 (cyberbureau.police.go.kr)\n\n

        개인정보보호법」제35조(개인정보의 열람), 제36조(개인정보의 정정·삭제), 제37조(개인정보의 처리정지 등)의 규정에 의한 요구에 대 하여 공공기관의 장이 행한 처분 또는 부작위로 인하여 권리 또는 이익의 침해를 받은 자는 행정심판법이 정하는 바에 따라 행정심판을 청구할 수 있습니다.\n
        ※ 행정심판에 대해 자세한 사항은 중앙행정심판위원회(www.simpan.go.kr) 홈페이지를 참고하시기 바랍니다.\n\n\n\n
    </string>
</resources>