<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5EEE0"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:background="#CFB997"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="220dp"
                android:layout_height="match_parent"
                android:drawableLeft="@drawable/user_1"
                android:gravity="center"
                android:text="사용자 등록 코드"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/back"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginRight="0dp"
                android:background="#CFB997"
                app:srcCompat="@drawable/back" />

        </RelativeLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/explane"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/explane"
                    android:textSize="20dp" />

                <TextView
                    android:layout_marginTop="10dp"
                    android:id="@+id/explane1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/explane_1"
                    android:textSize="17dp" />

                <TextView
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:id="@+id/explane2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/explane_1_1"
                    android:textSize="14dp" />

                <TextView
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:id="@+id/explane3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/explane_1_2"
                    android:textSize="14dp" />

                <TextView
                    android:layout_marginTop="10dp"
                    android:id="@+id/explane4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/explane_2"
                    android:textSize="17dp" />

                <TextView
                    android:layout_marginTop="10dp"
                    android:id="@+id/explane5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/explane_3"
                    android:textSize="17dp" />

            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/explane_4"
                android:textSize="17dp" />

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/explane_5"
                android:textSize="17dp" />

        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="195dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="내용을 확인했습니다."
                        android:textSize="18dp" />

                    <CheckBox
                        android:id="@+id/checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="400dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="#808080"></View>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center">

                <EditText
                    android:id="@+id/code"
                    android:layout_width="180dp"
                    android:layout_height="45dp"
                    android:background="@drawable/textview5_1"
                    android:clickable="false"
                    android:focusable="false"
                    android:gravity="center"
                    android:hint="코드를 입력해주세요." />

                <Button
                    android:id="@+id/complete"
                    android:layout_marginLeft="20dp"
                    android:layout_width="160dp"
                    android:layout_height="51dp"
                    android:backgroundTint="#888A8A"
                    android:textColor="#ffffff"
                    android:textSize="17dp"
                    android:text="완료"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    app:srcCompat="@drawable/family5" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>